// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/Column Basic 1`] = `
<div
  className="flex flex-col items-start space-y-1"
>
  <button
    className=""
  >
    button 1
  </button>
  <button
    className=""
  >
    button 2
  </button>
  <button
    className=""
  >
    button 3
  </button>
</div>
`;

exports[`Storyshots Layout/Column Custom Gutter 1`] = `
<div
  className="flex flex-col items-start space-y-5"
>
  <button
    className=""
  >
    button 1
  </button>
  <button
    className=""
  >
    button 2
  </button>
  <button
    className=""
  >
    button 3
  </button>
</div>
`;

exports[`Storyshots Layout/Column Spaced 1`] = `
<div
  style={
    Object {
      "height": 500,
    }
  }
>
  <div
    className="flex flex-col items-start justify-between h-full space-y-1"
  >
    <button
      className=""
    >
      button 1
    </button>
    <button
      className=""
    >
      button 2
    </button>
    <button
      className=""
    >
      button 3
    </button>
  </div>
</div>
`;
